--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "build-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac dir --publish never",
     "build-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
     "build-native-linux2": "npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage --publish never",
+    "build-native-win-artifact": "npm run build && node ./native-build-scripts/01-copy-files.js win && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --ia32 --win zip --publish never",
+    "build-native-mac-artifact": "npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac tar.gz --publish never -c.mac.identity=null",
+    "build-native-linux-artifact": "npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux tar.gz --publish never",
     "publish-native-win": "cross-env NODE_ENV=production npm run download-binaries-win && npm run build && node ./native-build-scripts/01-copy-files.js win && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
     "publish-native-mac": "cross-env NODE_ENV=production npm run download-binaries-mac && npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
     "publish-native-linux": "cross-env NODE_ENV=production npm run download-binaries-linux && npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
@@ -62,39 +65,39 @@
     "babel-loader": "^8.1.0",
     "colors": "^1.4.0",
     "cross-env": "^7.0.2",
-    "electron": "^10.1.5",
-    "electron-builder": "22.10.5",
-    "electron-mocha": "^9.1.0",
+    "electron": "^25.2.0",
+    "electron-builder": "24.4.0",
+    "electron-mocha": "^12.0.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.5",
     "extract-zip": "^2.0.1",
-    "jsdoc": "^3.6.4",
-    "mocha": "^8.1.3",
-    "node-sass": "^4.14.1",
+    "jsdoc": "^4.0.2",
+    "mocha": "^10.2.0",
+    "node-sass": "^9.0.0",
     "nodemon": "^2.0.4",
     "rmrf-promise": "^1.1.0",
     "should": "^13.2.3",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^4.5.0",
     "dexie": "^3.0.2",
     "electron-context-menu": "^2.0.1",
     "electron-is-dev": "^1.2.0",
-    "follow-redirects": "^1.15.2",
     "electron-updater": "^5.0.0",
+    "follow-redirects": "^1.15.2",
     "fs-extra": "^9.0.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "mathjs": "^7.0.2",
     "moment": "^2.27.0",
-    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "qrcode": "^1.4.4",
     "react": "^16.13.1",
@@ -102,9 +105,12 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "superagent": "^5.3.1",
-    "sweetalert2": "^10.0.2",
+    "superagent": "^8.0.9",
+    "sweetalert2": "^11.4.8",
     "uuid": "^8.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0",
     "winston": "^3.3.3"
   },
   "build": {
