--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
         with:
-          ref: dev
+          ref: upgrade_deps
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 20.3.1
 
       - name: Install Dependencies
         run: npm install --no-audit
