--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,10 @@ on:
       branch:
         description: 'Branch to build'
         required: true
-#  push:
-#    branches:
-#      - main
+    is_beta:
+        description: 'Is it a beta release?'
+        required: false
+        default: false
 
 jobs:
   build:
@@ -63,5 +64,5 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: XLite-1.0.4-${{ matrix.os }}
-          path: dist-native/XLite-1.0.4-*
+          name: XLite-${{ github.event.inputs.is_beta == 'true' && '1.0.5-beta' || '1.0.5' }}-${{ matrix.os }}
+          path: dist-native/XLite-${{ github.event.inputs.is_beta == 'true' && '1.0.5-beta' || '1.0.5' }}-*
