--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -62,12 +62,32 @@ jobs:
           npm run build-native-win-artifact
           del dist-native\XLite-${{ github.event.inputs.tag }}-win-x64.exe.blockmap
 
+          
       - name: Build Native Image (macOS)
         if: startsWith(matrix.os, 'macos')
         run: |
           npm run build-native-mac-artifact
           rm dist-native/XLite-${{ github.event.inputs.tag }}-mac.dmg.blockmap 
           
+      - name: Generate MD5 Checksums (Ubuntu)
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          find dist-native -name "XLite-1.0.4-*" -exec sh -c 'md5sum "$0" | awk "{print \$1}" > "dist-native/$(basename "$0")-md5-checksum.txt"' {} \;
+
+      - name: Generate MD5 Checksums (macOS)
+        if: startsWith(matrix.os, 'macos')
+        run: |
+          find dist-native -name "XLite-${{ github.event.inputs.tag }}-*" -exec sh -c 'md5 -q "$0" > "dist-native/$(basename "$0")-md5-checksum.txt"' {} \;
+
+      - name: Generate MD5 Checksums (Windows)
+        if: startsWith(matrix.os, 'windows')
+        run: |
+          foreach ($File in Get-ChildItem -Filter "dist-native\XLite-${{ github.event.inputs.tag }}-*") {
+            $MD5Checksum = (CertUtil -hashfile $File.FullName MD5 | Select-Object -Index 1).Trim()
+            $ChecksumFile = "dist-native\$($File.Name)-md5-checksum.txt"
+            $MD5Checksum | Out-File -FilePath $ChecksumFile
+          }
+
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
