auto config prerelease

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         with:
           name: Xlite ${{ github.ref_name}}
-          prerelease: true
+          prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
           generate_release_notes: true
           files: |
             dist-native/*.tar.gz
@@ -80,7 +80,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         with:
           name: Xlite ${{ github.ref_name}}
-          prerelease: true
+          prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
           generate_release_notes: true
           files: |
             dist-native/*.dmg
@@ -113,7 +113,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         with:
           name: Xlite ${{ github.ref_name}}
-          prerelease: true
+          prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
           generate_release_notes: true
           files: |
             dist-native/*.exe
