update pre packaged manifest

--- a/blockchain-configuration-files/xbridge-confs/blocknet--v4.2.0.conf
+++ b/blockchain-configuration-files/xbridge-confs/blocknet--v4.2.0.conf
@@ -1,13 +1,13 @@
-[PHR]
-Title=Phore
+[BLOCK]
+Title=Blocknet
 Address=
 Ip=127.0.0.1
-Port=11772
+Port=41414
 Username=
 Password=
-AddressPrefix=55
-ScriptPrefix=13
-SecretPrefix=212
+AddressPrefix=26
+ScriptPrefix=28
+SecretPrefix=154
 COIN=100000000
 MinimumAmount=0
 TxVersion=1
