--- a/blockchain-configuration-files/xbridge-confs/dash--v19.2.0.conf
+++ b/blockchain-configuration-files/xbridge-confs/dash--v19.2.0.conf
@@ -1,13 +1,13 @@
-[DOGE]
-Title=Dogecoin
+[DASH]
+Title=Dash
 Address=
 Ip=127.0.0.1
-Port=22555
+Port=9998
 Username=
 Password=
-AddressPrefix=30
-ScriptPrefix=22
-SecretPrefix=158
+AddressPrefix=76
+ScriptPrefix=16
+SecretPrefix=204
 COIN=100000000
 MinimumAmount=0
 TxVersion=1
@@ -15,7 +15,7 @@ DustAmount=0
 CreateTxMethod=BTC
 GetNewKeySupported=false
 ImportWithNoScanSupported=true
-MinTxFee=100000000
-BlockTime=60
-FeePerByte=200000
+MinTxFee=2500
+BlockTime=150
+FeePerByte=5
 Confirmations=0
