--- a/blockchain-configuration-files/xbridge-confs/pivx--v5.5.0.conf
+++ b/blockchain-configuration-files/xbridge-confs/pivx--v5.5.0.conf
@@ -1,19 +1,19 @@
-[BLOCK]
-Title=Blocknet
+[PIVX]
+Title=PIVX
 Address=
 Ip=127.0.0.1
-Port=41414
+Port=51473
 Username=
 Password=
-AddressPrefix=26
-ScriptPrefix=28
-SecretPrefix=154
+AddressPrefix=30
+ScriptPrefix=13
+SecretPrefix=212
 COIN=100000000
 MinimumAmount=0
 TxVersion=1
 DustAmount=0
 CreateTxMethod=BTC
-GetNewKeySupported=true
+GetNewKeySupported=false
 ImportWithNoScanSupported=true
 MinTxFee=10000
 BlockTime=60
