--- a/blockchain-configuration-files/xbridge-confs/dogecoin--v1.14.5.conf
+++ b/blockchain-configuration-files/xbridge-confs/dogecoin--v1.14.5.conf
@@ -1,13 +1,13 @@
-[PIVX]
-Title=PIVX
+[DOGE]
+Title=Dogecoin
 Address=
 Ip=127.0.0.1
-Port=52473
+Port=22555
 Username=
 Password=
 AddressPrefix=30
-ScriptPrefix=13
-SecretPrefix=212
+ScriptPrefix=22
+SecretPrefix=158
 COIN=100000000
 MinimumAmount=0
 TxVersion=1
@@ -15,7 +15,7 @@ DustAmount=0
 CreateTxMethod=BTC
 GetNewKeySupported=false
 ImportWithNoScanSupported=true
-MinTxFee=10000
+MinTxFee=225000
 BlockTime=60
-FeePerByte=20
+FeePerByte=2500
 Confirmations=0
