--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
             dist-native/*.tar.gz
             dist-native/*.AppImage
             dist-native/*.deb
+            dist-native/latest-*.yml
 
       - uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/v')
@@ -51,6 +52,7 @@ jobs:
             dist-native/*.tar.gz
             dist-native/*.AppImage
             dist-native/*.deb
+            dist-native/latest-*.yml
 
   build_mac:
     runs-on: macos-13
@@ -80,6 +82,7 @@ jobs:
             dist-native/*.dmg
             dist-native/*.dmg.blockmap
             dist-native/*.zip
+            dist-native/latest-*.yml
 
       - uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/v')
@@ -91,6 +94,7 @@ jobs:
             dist-native/*.dmg
             dist-native/*.dmg.blockmap
             dist-native/*.zip
+            dist-native/latest-*.yml
 
   build_win:
     runs-on: windows-2022
@@ -105,7 +109,8 @@ jobs:
       - run: npm install --no-audit
       - run: npm run download-binaries-win
       - run: npm run build-native-win
-
+      - run: Move-Item -Path "dist-native/latest.yml" -Destination "dist-native/latest-win.yml"
+      
       - uses: actions/upload-artifact@v3
         with:
           name: artifacts-win
@@ -113,6 +118,7 @@ jobs:
             dist-native/*.exe
             dist-native/*.exe.blockmap
             dist-native/*.zip
+            dist-native/latest-*.yml
 
       - uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/v')
@@ -124,3 +130,4 @@ jobs:
             dist-native/*.exe
             dist-native/*.exe.blockmap
             dist-native/*.zip
+            dist-native/latest-*.yml
